tests/baselines/reference/parserRegularExpressionDivideAmbiguity1.errors.txt
parserRegularExpressionDivideAmbiguity1.ts(2,2): error TS2552: Cannot find name 'notregexp'. Did you mean 'RegExp'?
parserRegularExpressionDivideAmbiguity1.ts(2,12): error TS2304: Cannot find name 'a'.


==== parserRegularExpressionDivideAmbiguity1.ts (2 errors) ====
    1
    /notregexp/a.foo();
     ~~~~~~~~~
!!! error TS2552: Cannot find name 'notregexp'. Did you mean 'RegExp'?
!!! related TS2728 lib.es5.d.ts:--:--: 'RegExp' is declared here.
               ~
!!! error TS2304: Cannot find name 'a'.